--- a/Plugins/RUI/ContextualMenu/Tests/Tests.asmdef
+++ b/Plugins/RUI/ContextualMenu/Tests/Tests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "ContextualMenu"
+        "ContextualMenu",
+        "UnityEngine.UI"
     ],
     "includePlatforms": [
         "Editor"
